--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,11 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import reduce from functools, numpy and pandas"
+    "# Import reduce from functools, numpy and pandas\n",
+    "from functools import reduce\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -32,12 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
-    "\n",
     "location = '../data/58585-0.txt'\n",
     "with open(location, 'r', encoding=\"utf8\") as f:\n",
     "    prophet = f.read().split(' ')"
@@ -54,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet = list(map(lambda x: x,prophet[568:]))"
    ]
   },
   {
@@ -70,11 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PROPHET\\n\\n|Almustafa,', 'the{7}', 'chosen', 'and', 'the\\nbeloved,', 'who', 'was', 'a', 'dawn', 'unto']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(prophet[0:10])"
    ]
   },
   {
@@ -88,21 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reference(x):\n",
-    "    '''\n",
-    "    Input: A string\n",
-    "    Output: The string with references removed\n",
-    "    \n",
-    "    Example:\n",
-    "    Input: 'the{7}'\n",
-    "    Output: 'the'\n",
-    "    '''\n",
-    "    \n",
-    "    # your code here"
+    "    return x.split(\"{\")[0]\n",
+    "reference (\"the{7}\")"
    ]
   },
   {
@@ -114,11 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PROPHET\\n\\n|Almustafa,', 'the', 'chosen', 'and', 'the\\nbeloved,', 'who', 'was', 'a', 'dawn', 'unto']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "prophet_reference = list(map(reference,prophet))\n",
+    "print(prophet_reference[0:10])"
    ]
   },
   {
@@ -130,21 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the', 'beloved']"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def line_break(x):\n",
-    "    '''\n",
-    "    Input: A string\n",
-    "    Output: A list of strings split on the line break (\\n) character\n",
-    "        \n",
-    "    Example:\n",
-    "    Input: 'the\\nbeloved'\n",
-    "    Output: ['the', 'beloved']\n",
-    "    '''\n",
-    "    \n",
-    "    # your code here"
+    "    return x.split(\"\\n\")\n",
+    "line_break('the\\nbeloved')"
    ]
   },
   {
@@ -156,11 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['PROPHET', '', '|Almustafa,'], ['the'], ['chosen'], ['and'], ['the', 'beloved,'], ['who'], ['was'], ['a'], ['dawn'], ['unto']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "prophet_line = list(map(line_break,prophet_reference))\n",
+    "print(prophet_line[0:10])"
    ]
   },
   {
@@ -172,11 +206,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PROPHET', '|Almustafa,', 'the', 'chosen', 'and', 'the', 'beloved,', 'who', 'was', 'a']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "prophet_flat=[i for j in prophet_line for i in j if i]\n",
+    "print(prophet_flat[0:10])"
    ]
   },
   {
@@ -190,28 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "def word_filter(x):\n",
-    "    '''\n",
-    "    Input: A string\n",
-    "    Output: True if the word is not in the specified list \n",
-    "    and False if the word is in the list.\n",
-    "        \n",
-    "    Example:\n",
-    "    word list = ['and', 'the']\n",
-    "    Input: 'and'\n",
-    "    Output: False\n",
-    "    \n",
-    "    Input: 'John'\n",
-    "    Output: True\n",
-    "    '''\n",
-    "    \n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
-    "    \n",
-    "    # your code here"
+    "    if x.lower() not in word_list:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
@@ -219,6 +250,26 @@
    "metadata": {},
    "source": [
     "Use the `filter()` function to filter out the words speficied in the `word_filter()` function. Store the filtered list in the variable `prophet_filter`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PROPHET', '|Almustafa,', 'chosen', 'beloved,', 'who', 'was', 'dawn', 'unto', 'his', 'own']\n"
+     ]
+    }
+   ],
+   "source": [
+    "prophet_filter= list(filter(word_filter, prophet_flat))\n",
+    "print(prophet_filter[0:10])"
    ]
   },
   {
@@ -236,11 +287,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def word_filter_case(x):\n",
-    "   \n",
+    "def word_filter(x):\n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
-    "    \n",
-    "    # your code here"
+    "    if x.lower() not in word_list:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
@@ -256,21 +308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'John Smith'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def concat_space(a, b):\n",
-    "    '''\n",
-    "    Input:Two strings\n",
-    "    Output: A single string separated by a space\n",
-    "        \n",
-    "    Example:\n",
-    "    Input: 'John', 'Smith'\n",
-    "    Output: 'John Smith'\n",
-    "    '''\n",
-    "    \n",
-    "    # your code here"
+    "    return a + ' ' + b\n",
+    "concat_space('John', 'Smith')"
    ]
   },
   {
@@ -282,11 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROPHET |Almustafa, chosen beloved, who was dawn unto his own day, had waited twelve years in city of Orphalese\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "prophet_string=reduce(concat_space,prophet_filter)\n",
+    "print(prophet_string[0:111])"
    ]
   },
   {
@@ -398,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
