--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\\ufeffThe', 'Project', 'Gutenberg', 'EBook', 'of', 'The', 'Prophet,', 'by', 'Kahlil', 'Gibran\\n\\nThis']\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this code:\n",
     "location = '../data/58585-0.txt'\n",
     "with open(location, 'r', encoding=\"utf8\") as f:\n",
-    "    prophet = f.read().split(' ')"
+    "    prophet = f.read().split(' ')\n",
+    "print(prophet[0:10])"
    ]
   },
   {
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -98,24 +107,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'the'"
+       "'has he'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def reference(x):\n",
-    "    return x.split(\"{\")[0]\n",
-    "reference (\"the{7}\")"
+    "    \n",
+    "    if x.startswith ('{'):\n",
+    "        return x.split('}')[-1]\n",
+    "    elif x.endswith('}'):\n",
+    "        return x.split('{')[0]\n",
+    "    \n",
+    "    if \"{\" in x:\n",
+    "        \n",
+    "        if x.index(\"{\") !=0:\n",
+    "            first_element=x.split('{')[0]\n",
+    "            second_element=x.split('}')[1]\n",
+    "            return first_element + \"\" + second_element\n",
+    "        \n",
+    "        elif x.index(\"}\") !=-1:\n",
+    "            first_element=x.split('{')[0]\n",
+    "            second_element=x.split('}')[1]\n",
+    "            return first_element + \"\" + second_element\n",
+    "    else:\n",
+    "        return x\n",
+    "reference (\"has {7}he\")"
    ]
   },
   {
@@ -127,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +188,7 @@
        "['the', 'beloved']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -283,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +344,7 @@
        "'John Smith'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,20 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROPHET |Almustafa, chosen beloved, who was dawn unto his own day, had waited twelve years in city of Orphalese\n"
+      "PROPHET |Almustafa, chosen beloved, who was dawn unto his own day, had waited twelve years in city of Orphalese for his ship that was to return bear him back to isle of his birth. in twelfth year, on seventh day of Ielool, month of reaping, he climbed hill without city walls looked seaward; he beheld his ship coming with mist. Then gates of his heart were flung open, his joy flew far over sea. he closed his eyes prayed in silences of his soul. ***** But as he descended hill, sadness came upon him, he thought in his heart: How shall I go in peace without sorrow? Nay, not without wound in spirit shall I leave this city. Long were days of pain I have spent within its walls, long were nights of aloneness; who can depart from his pain his aloneness without regret? Too many fragments of spirit have I scattered in these streets, too many are children of my longing that walk naked among these hills, I cannot withdraw from them without burden ache. It is not garment I cast off this day, but skin that I tear with my own hands. Nor is it thought I leave behind me, but heart made sweet with hunger with thirst. ***** Yet I cannot tarry longer. sea that calls all things unto her calls me, I must embark. For to stay, though hours burn in night, is to freeze crystallize be bound in mould. Fain would I take with me all that is here. But how shall I? voice cannot carry tongue lips that gave it wings. Alone must it seek ether. alone without his nest shall eagle fly across sun. ***** Now when he reached foot of hill, he turned again towards sea, he saw his ship approaching harbour, upon her prow mariners, men of his own land. his soul cried out to them, he said: Sons of my ancient mother, you riders of tides, How often have you sailed in my dreams. now you come in my awakening, which is my deeper dream. Ready am I to go, my eagerness with sails full set awaits wind. Only another breath will I breathe in this still air, only another loving look cast backward, then I shall stand among you, seafarer among seafarers. you, vast sea, sleepless mother, Who alone are peace freedom to river stream, Only another winding will this stream make, only another murmur in this glade, then shall I come to you, boundless drop to boundless ocean. ***** as he walked he saw from afar men women leaving their fields their vineyards hastening towards city gates. he heard their voices calling his name, shouting from field to field telling one another of coming of his ship. he said to himself: Shall day of parting be day of gathering? shall it be said that my eve was in truth my dawn? what shall I give unto him who has left his plough in midfurrow, or to him who has stopped wheel of his winepress? Shall my heart become tree heavy-laden with fruit that I may gather give unto them? shall my desires flow like fountain that I may fill their cups? Am I harp that hand of mighty may touch me, or flute that his breath may pass through me? seeker of silences am I, what treasure have I found in silence\n"
      ]
     }
    ],
    "source": [
     "prophet_string=reduce(concat_space,prophet_filter)\n",
-    "print(prophet_string[0:111])"
+    "print(prophet_string[0:3000])"
    ]
   },
   {
